# zhongyi_ai

./: .dockerignore  .env.example  .env.qdrant.example  .gitignore  ARCHITECTURE.md  Dockerfile  Linux环境搭建-CentOS.md  Linux环境搭建-OpenCloudOS.md  Linux环境搭建.md  README.md  docker-compose.qdrant.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  优化计划.md  系统评估报告.md  系统评估报告2.md
data/: diseases.jsonl  diseases_test.jsonl  herbs.jsonl  herbs_test.jsonl  syndromes.jsonl  syndromes_test.jsonl  tcm.db
scripts/: clear_stores.py  create_indexes.py  import_to_qdrant.py  init_data.py  start.bat  start.sh
src/: config.py
src/agent/: core.py  llm.py
src/api/: auth.py  server.py
src/api/static/: index.html
src/data/: database.py  seed.py
src/graphrag/: __init__.py  graph_builder.py  graph_store.py  llm_parser_utils.py  retriever.py  seed_graph.py  seedmysql.py
src/graphrag/jsonl/: formulas_test.jsonl  herbs_test.jsonl
src/graphrag/parsers/: __init__.py  parse_diseases.py  parse_formulas.py  parse_herbs.py  parse_syndromes.py
src/rag/: bm25_store.py  embedding.py  fusion.py  milvus_store.py  qdrant_store.py  retriever.py
src/tools/: graphrag_tools.py  rag_tool.py  tcm_tools.py
tests/: conftest.py  test_agent.py  test_evaluation.py  test_graphrag_tools.py  test_hybrid_retrieval.py  test_rag_tool.py  test_tcm_tools.py
