[project]
name = "zhongyi-ai"
version = "0.1.0"
description = "中医 AI Agent - LangChain + 通义千问 + Milvus + SQLite"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "dashscope>=1.20.0",
    "pymilvus>=2.4.0",
    "qdrant-client>=1.13.0",
    "neo4j>=5.26.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "langgraph>=0.2.0",
    "tqdm>=4.66.0",
    "pymysql>=1.1.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "asyncio: mark a test as an async test",
]
